--- a/read_comics/templates/500.html
+++ b/read_comics/templates/500.html
@@ -58,7 +58,7 @@
                   Restart the browser after clearing the cache and deleting the cookies. <br>
                   If this does not help, please contact me at <a href="mailto:nonameit@ya.ru">nonameit@ya.ru</a>
                 </p>
-                <a href="{% url "home" %}" class="btn btn-primary round glow">BACK
+                <a href="{% url "pages:home" %}" class="btn btn-primary round glow">BACK
                   TO
                   HOME</a>
               </div>
