--- a/read_comics/templates/404.html
+++ b/read_comics/templates/404.html
@@ -55,7 +55,7 @@
                 <h1 class="error-title">Page Not Found :(</h1>
                 <p class="pb-3">
                   we couldn't find the page you are looking for</p>
-                <a href="{% url "home" %}" class="btn btn-primary round glow mt-3">BACK
+                <a href="{% url "pages:home" %}" class="btn btn-primary round glow mt-3">BACK
                   TO
                   HOME</a>
               </div>
