fix: fixes after first deployment

--- a/read_comics/missing_issues/templates/missing_issues/ignored_issues_list.html
+++ b/read_comics/missing_issues/templates/missing_issues/ignored_issues_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load url_extras %}
 {% load static %}
 
 {% block title %}Ignored issues{% endblock %}
@@ -29,7 +30,7 @@
     <tbody>
     {% for issue in ignored_issues %}
       <tr>
-        <td class="width-100"><a href="{% url "missing_issues:delete_ignored_issue" pk=issue.pk %}" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="Delete"><i class="fad fa-trash"></i></a></td>
+        <td class="width-100"><a href="{% url "missing_issues:delete_ignored_issue" pk=issue.pk %}?page={{ page_obj.number }}" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="Delete"><i class="fad fa-trash"></i></a></td>
         <td>{{ issue.publisher_name }}</td>
         <td><a href="{{ issue.volume_comicvine_url }}" target="_blank">{{ issue.volume_name }} ({{ issue.volume_start_year }})</a></td>
         <td>#{{ issue.number }}</td>
@@ -40,6 +41,13 @@
     {% endfor %}
     </tbody>
   </table>
+  <nav aria-label="Page navigation">
+    <ul class="pagination pagination-borderless justify-content-center mt-2">
+      {% for page in pages %}
+         <li class="page-item {{ page.disabled }} {{ page.active }}"><a class="page-link" href="{% url_add_query_params page=page.num %}">{{ page.num }}</a></li>
+      {% endfor %}
+    </ul>
+  </nav>
 {% endblock %}
 
 {% block modals %}
