--- a/read_comics/missing_issues/templates/missing_issues/ignored_publishers_list.html
+++ b/read_comics/missing_issues/templates/missing_issues/ignored_publishers_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load url_extras %}
 {% load static %}
 
 {% block title %}Ignored publishers{% endblock %}
@@ -25,13 +26,20 @@
     <tbody>
     {% for publisher in ignored_publishers %}
       <tr>
-        <td class="width-100"><a href="{% url "missing_issues:delete_ignored_publisher" pk=publisher.pk %}" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="Delete"><i class="fad fa-trash"></i></a></td>
+        <td class="width-100"><a href="{% url "missing_issues:delete_ignored_publisher" pk=publisher.pk %}?page={{ page_obj.number }}" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="Delete"><i class="fad fa-trash"></i></a></td>
         <td><a href="{{ publisher.comicvine_url }}" target="_blank">{{ publisher.name }}</a></td>
         <td>{{ publisher.comicvine_id }}</td>
       </tr>
     {% endfor %}
     </tbody>
   </table>
+  <nav aria-label="Page navigation">
+    <ul class="pagination pagination-borderless justify-content-center mt-2">
+      {% for page in pages %}
+         <li class="page-item {{ page.disabled }} {{ page.active }}"><a class="page-link" href="{% url_add_query_params page=page.num %}">{{ page.num }}</a></li>
+      {% endfor %}
+    </ul>
+  </nav>
 {% endblock %}
 
 {% block modals %}
