--- a/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
+++ b/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load url_extras %}
 {% load static %}
 
 {% block title %}
@@ -27,6 +28,13 @@
 
 {% block page_content %}
   {% include 'missing_issues/issues_table.html' with missing_issues=missing_issues all_cols=True %}
+   <nav aria-label="Page navigation">
+    <ul class="pagination pagination-borderless justify-content-center mt-2">
+      {% for page in pages %}
+         <li class="page-item {{ page.disabled }} {{ page.active }}"><a class="page-link" href="{% url_add_query_params page=page.num %}">{{ page.num }}</a></li>
+      {% endfor %}
+    </ul>
+  </nav>
 {% endblock %}
 
 {% block modals %}
