--- a/read_comics/pages/templates/pages/home.html
+++ b/read_comics/pages/templates/pages/home.html
@@ -134,7 +134,8 @@
         </div>
       </div>
 
-    <div class="col-xl-3 col-sm-6">
+      {% if user.is_staff %}
+        <div class="col-xl-3 col-sm-6">
         <div class="card text-center div-link">
           <a class="div-default-link" href="{% url "missing_issues:all" %}"></a>
           <div class="card-body">
@@ -152,6 +153,7 @@
           </div>
         </div>
       </div>
+      {% endif %}
 
     </div>
   </section>
