--- a/read_comics/templates/404.html
+++ b/read_comics/templates/404.html
@@ -85,8 +85,8 @@
 
 <!-- BEGIN: Theme JS-->
 <script src="{% static "_frest/js/scripts/configs/vertical-menu-light.min.js" %}"></script>
-<script src="{% static "_frest/js/core/app-menu.min.js" %}"></script>
-<script src="{% static "_frest/js/core/app.min.js" %}"></script>
+<script src="{% static "_frest/js/core/app-menu.js" %}"></script>
+<script src="{% static "_frest/js/core/app.js" %}"></script>
 <script src="{% static "_frest/js/scripts/components.min.js" %}"></script>
 <script src="{% static "_frest/js/scripts/footer.min.js" %}"></script>
 <!-- END: Theme JS-->
